# check-shared-matrix

./: CMakeLists.txt  README.md
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  export.h  matrix.cpp  matrix.h
lib/c/: c_api.cpp  c_api.h
matrixlib/: CmakeLists.txt  export.h  matrix.cpp  matrix.h
matrixlib/c/: c_api.cpp  c_api.h
matrixlib/test/: test-shared-matrix.cpp  test-static-matrix.cpp
src/: main.cpp
